# TuringMachine_TernaryAgent

./: README.md  pyproject.toml
.claude/: settings.local.json
docs/: architecture.md  contributing.md  spec-reference.md  three_office.md  user-guide.md
docs/superpowers/specs/: 2026-03-25-phase2-signals-traces-design.md
examples/: minimal_three_office.agent.compiled.json  minimal_three_office.agent.json  minimal_three_office.compiled.json  three_office.agent.json  three_office.compiled.json
src/tmviz/cli/: __init__.py  generate_examples.py  main.py
src/tmviz/compile/: __init__.py  emit_json.py  machine.py  rules.py  states.py
src/tmviz/compiler/: __init__.py  emit_json.py  machine.py  rules.py  states.py
src/tmviz/dev/: __init__.py  watch.py
src/tmviz/events/: __init__.py  signals.py
src/tmviz/factory/: __init__.py  machine_factory.py
src/tmviz/graph/: __init__.py  build.py  highways.py  validate.py
src/tmviz/model/: __init__.py  agent_spec.py  cells.py  enums.py  offices.py  paths.py
src/tmviz/storage/: __init__.py  engine.py  models.py  runs.py
src/tmviz/trace/: __init__.py  logger.py  replay.py  snapshot.py
src/tmviz/ui/: renderer.py  theme.py
tests/: conftest.py  test_agent_compile.py  test_agent_spec.py  test_cli.py  test_cli_typer.py  test_compile_invariants.py  test_compiler_integrity_handoff.py  test_controller.py  test_factory.py  test_inductive_behavior.py  test_semantic_overlay.py  test_signals.py  test_snapshot.py  test_storage.py  test_trace_integration.py  test_trace_replay.py
