[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmviz"
version = "0.1.0"
description = "Turing machine simulator and visualizer"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "blinker>=1.6,<2",
    "networkx>=3,<4",
    "pydantic>=2,<3",
    "pygame-ce>=2.5.0,<3",
    "rich>=13,<14",
    "sqlmodel>=0.0.16,<1",
    "structlog>=24,<25",
    "transitions>=0.9,<1",
    "typer>=0.12,<1",
]

[project.optional-dependencies]
fast = [
    "orjson>=3,<4",
]
watch = [
    "watchfiles>=0.21,<1",
]
dev = [
    "mypy>=1.9,<2",
    "orjson>=3,<4",
    "pytest>=8.0,<9",
    "pytest-cov>=5.0,<6",
    "ruff>=0.3,<1",
    "watchfiles>=0.21,<1",
]

[project.scripts]
tmviz = "tmviz.main:main"
tmviz-cli = "tmviz.cli.main:app"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["src"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["networkx", "networkx.*"]
ignore_missing_imports = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
